# drone_project

./: .gitignore  .gitmodules  CLAUDE.md  README.md
core/: CMakeLists.txt
core/autonomy/: CMakeLists.txt
core/autonomy/include/drone_core/autonomy/: autonomy_core.hpp
core/autonomy/src/: autonomy_core.cpp
core/autonomy/test/: test_autonomy_core.cpp
core/cmake/: drone_coreConfig.cmake.in
core/common/: CMakeLists.txt
core/common/include/drone_core/common/: frames.hpp  logging.hpp  trajectory_eval.hpp  types.hpp
core/common/src/: frames.cpp  trajectory_eval.cpp
core/common/test/: test_frames.cpp
core/control/: CMakeLists.txt
core/control/include/drone_core/control/: flatness_mapper.hpp  position_control.hpp  trajectory_tracker.hpp
core/control/src/: flatness_mapper.cpp  position_control.cpp  trajectory_tracker.cpp
core/control/test/: test_feedforward.cpp  test_flatness_mapper.cpp  test_position_control.cpp  test_trajectory_tracker.cpp
core/planning/: CMakeLists.txt
core/planning/include/drone_core/planning/: corridor.hpp  corridor_trajectory.hpp  geometric_planner.hpp  min_snap_trajectory.hpp  rrt_star_planner.hpp
core/planning/src/: corridor.cpp  corridor_trajectory.cpp  geometric_planner.cpp  min_snap_trajectory.cpp  rrt_star_planner.cpp
core/planning/test/: test_corridor.cpp  test_goal_projection.cpp  test_planner.cpp  test_unknown_cost.cpp
docs/: frames_2026-05-19_13.12.16.gv
global_planner/: CMakeLists.txt  package.xml
global_planner/include/global_planner/: nlopt_trajectory_optimizer.hpp  ompl_rrt_core.hpp  osqp_trajectory_optimizer.hpp  sfc_optimizer.hpp  trajectory_optimizer.hpp
global_planner/src/: nlopt_trajectory_optimizer.cpp  ompl_rrt_core.cpp  planner_node.cpp  sfc_optimizer.cpp  trajectory_optimizer.cpp  trajectory_optimizer_fsc.cpp
okvis2/config/: hilti_challenge_2022.yaml  realsense_D435i.yaml
okvis2/okvis_ceres/include/okvis/: ViSlamBackend.hpp
okvis2/okvis_ceres/src/: ImuError.cpp  TwoPoseExtrinsicsGraphError.cpp
okvis2/okvis_common/include/okvis/: Parameters.hpp
okvis2/okvis_common/src/: ViParametersReader.cpp
okvis2/okvis_cv/include/okvis/: Frame.hpp
okvis2/okvis_frontend/src/: Frontend.cpp
okvis2/okvis_multisensor_processing/include/okvis/: ThreadedSlam.hpp
okvis2/okvis_ros2/src/: Publisher.cpp
pc_publisher/config/: rvizpc.rviz
position_controller/: CMakeLists.txt  package.xml
position_controller/include/position_controller/: PositionControl.hpp
position_controller/launch/: position_controler_launch copy.py  position_controler_launch.py  position_controller_launch.py  position_controller_launch_sim.py  position_controller_vision_launch.py
position_controller/src/: PositionControl.cpp  position_controller_node copy.cpp  position_controller_node old.cpp  position_controller_node.cpp  test_library.cpp
pruebas_pablo/: CMakeLists.txt  package.xml  setup.py
pruebas_pablo/include/pruebas_pablo/: prueba2.hpp  prueba2_waypoints.hpp  prueba3_BC.hpp  prueba4_BC.hpp
pruebas_pablo/pruebas_pablo/: markers.py
pruebas_pablo/src/: prueba2.cpp  prueba2_waypoints.cpp  prueba3_BC.cpp  prueba4_BC.cpp
px4ctrl_pkg/: package.xml  setup.cfg  setup.py
px4ctrl_pkg/launch/: quad_launch.py
px4ctrl_pkg/px4ctrl_pkg/: attitude_control_node.py  py_node.py  quad_attitude_control_node.py  quad_py_node.py  quad_velocity_py_node.py  rates_control_node.py
ros2/autonomy_node/: CMakeLists.txt  package.xml
ros2/autonomy_node/launch/: autonomy_launch.py  autonomy_sim_launch.py  autonomy_vision_launch.py
ros2/autonomy_node/src/: autonomy_node.cpp
ros2/drone_interfaces/: CMakeLists.txt  package.xml
ros2/drone_interfaces/msg/: ControllerDebug.msg
ros2/sim/pc_publisher/: CMakeLists.txt  package.xml
ros2/sim/pc_publisher/src/: dataset_pc_node.cpp
ros2/tools/system_monitor_pkg/: package.xml  setup.cfg  setup.py
ros2/tools/system_monitor_pkg/system_monitor_pkg/: cpu_monitor.py
